--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -35,3 +35,7 @@ jobs:
         npm test
       env:
         CI: true
+    - uses: actions/upload-artifact@main
+      with:
+        name: webpack artifacts
+        path: public/
